logics improved